testsuite/tests/indexed-types/should_fail/Overlap15.stderr

Overlap15.hs:16:9: error:
    • Couldn't match expected type ‘F b [b] Bool’
                  with actual type ‘Bool’
    • In the expression: False
      In an equation for ‘foo’: foo _ = False
    • Relevant bindings include
        foo :: Proxy b -> F b [b] Bool (bound at Overlap15.hs:16:1)
